<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>dev.galasa</groupId>
	<artifactId>galasa-simbanktests-parent</artifactId>
	<version>0.25.0</version>
	<!-- If updating version,  reflect change in dev.galasa.simbank.ui -->
	<packaging>pom</packaging>

	<name>Galasa Sample SimBank Tests</name>
	<description>Sample test to run with Galasa against the SimBank application</description>
	<url>https://galasa.dev</url>

	<licenses>
		<license>
			<name>Eclipse Public License - v 2.0</name>
			<url>https://www.eclipse.org/legal/epl-2.0/t</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Michael Baylis</name>
			<email>Michael.Baylis@uk.ibm.com</email>
			<organization>IBM</organization>
			<organizationUrl>https://www.ibm.com</organizationUrl>
		</developer>
		<developer>
			<name>William Yates</name>
			<email>wyates@uk.ibm.com</email>
			<organization>IBM</organization>
			<organizationUrl>https://www.ibm.com</organizationUrl>
		</developer>
		<developer>
			<name>David Roberts</name>
			<email>david.roberts@uk.ibm.com</email>
			<organization>IBM</organization>
			<organizationUrl>https://www.ibm.com</organizationUrl>
		</developer>
		<developer>
			<name>James Davies</name>
			<email>james.davies@ibm.com</email>
			<organization>IBM</organization>
			<organizationUrl>https://www.ibm.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/galasa-dev/framework</url>
		<connection>scm:git:git:://github.com/galasa-dev/framework</connection>
		<developerConnection>scm:git:git:://github.com/galasa-dev/framework</developerConnection>
	</scm>

	<issueManagement>
		<url>https://github.com/galasa-dev/projectmanagement/issues</url>
		<system>GitHub</system>
	</issueManagement>

	<modules>
		<module>dev.galasa.simbank.tests</module>
		<module>dev.galasa.simbank.manager</module>
		<module>dev.galasa.simbank.obr</module>
		<module>dev.galasa.simbank.gherkin.tests</module>
	</modules>

	<distributionManagement>
		<repository>
			<id>galasa.release.repo</id>
			<url>${galasa.release.repo}</url>
		</repository>
		<snapshotRepository>
			<id>galasa.snapshot.repo</id>
			<url>${galasa.snapshot.repo}</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>

		<unpackBundle>true</unpackBundle>
		
		<gpg.skip>true</gpg.skip>
		<gpg.executable>/usr/bin/gpg2</gpg.executable>
		<gpg.keyname>C43F690BFADF88D8378721CEA00445C65AB3E02B</gpg.keyname>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>dev.galasa</groupId>
				<artifactId>galasa-bom</artifactId>
				<version>0.25.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>


	<dependencies>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.framework</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.core.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.zos.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.ipnetwork.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.http.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.artifact.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.linux.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.openstack.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.zos3270.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.zosbatch.zosmf.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.zosmf.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.docker.manager</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>dev.galasa</groupId>
			<artifactId>dev.galasa.selenium.manager</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>


	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>5.1.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<groupId>dev.galasa</groupId>
					<artifactId>galasa-maven-plugin</artifactId>
					<version>0.15.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.felix</groupId>
										<artifactId>maven-bundle-plugin</artifactId>
										<versionRange>[5.1.1,)</versionRange>
										<goals>
											<goal>bundle</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnConfiguration>true</runOnConfiguration>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>dev.galasa</groupId>
				<artifactId>galasa-maven-plugin</artifactId>
				<extensions>true</extensions>
                <executions>
                    <execution>
                        <id>build-testcatalog</id>
                        <phase>package</phase>
                        <goals>
                            <goal>bundletestcat</goal>
                        </goals>
                    </execution>
					<execution>
						<id>process-resources</id>
						<goals>
							<goal>gitcommithash</goal>
						</goals>
					</execution>
                </executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<inherited>false</inherited>
				<configuration>
					<descriptors>
						<descriptor>example-assem.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
							<passphraseServerId>gpg.passphrase</passphraseServerId>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


</project>
